@@ -7,6 +7,7 @@ QXmpp 0.x.y (UNRELEASED)
     QXmppIq
     QXmppStanza
 
+  - Remove deprecated QXmppRoster.h header.
   - Add TURN support for VoIP calls to use a relay in double-NAT network topologies.
   - Overhaul Multi-User Chat support to make it easier and more fully featured.
 
